[package]
name = "caesar_shift_gui"
version = "0.1.0"
edition = "2021"
authors = ["Kauê Miziara <kauemiziara@gmail.com>"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.7.0"
clipboard = "0.5.0"